<resources>
    <string name="app_name">p1_MenuPrincipal</string>
    <string name="apiKey" translatable="false">48d256f9583d5e3a1932242f152fcbf</string>
    <string name="searchGameURL" translatable="false">http://stucom.flx.cat/game/api/game/</string>
    <string name="searchGameDetails" translatable="false">http://stucom.flx.cat/game/api/game/%s</string>
    <string name="searchUserRanking" translatable="false">http://stucom.flx.cat/game/api/user/%s</string>
    <string name="updateUserName" translatable="false">http://stucom.flx.cat/game/api/user/%s?key=%s</string>
    <string name="chooseGameText">Escoge un juego.</string>
    <string name="emptyGameAdapter">No hay elementos</string>
    <string name="txtButtonPhoto">Tomar Foto</string>
    <string name="txtButton">Guardar</string>
    <string name="firstname">Nombre:</string>
    <string name="SndName">Apellido:</string>
    <string name="email">Email:</string>
    <string name="contentDescriptionName">Nombre</string>
    <string name="contentDescriptionSndName">Apellido</string>
    <string name="contentDescriptionEmail">Email</string>
</resources>
