<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.stucom.alu2015018.p1_menuprincipal.ajustes.AjustesActivity">

    <EditText
        android:id="@+id/emailET"
        android:layout_width="205dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/userName"
        android:layout_below="@+id/userName"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/contentDescriptionEmail"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/apellidoET"
        android:layout_width="205dp"
        android:layout_height="46dp"
        android:layout_alignStart="@+id/userName"
        android:layout_below="@+id/userName"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/contentDescriptionSndName"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btn_sendDataPlayer"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/emailET"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/txtButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/fotoJugador"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"

        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="76dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_sendDataPlayer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailET"
        app:layout_constraintVertical_bias="0.681"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="175dp"
        android:layout_height="33dp"
        android:layout_alignStart="@+id/fotoJugador"
        android:layout_below="@+id/fotoJugador"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="User Name"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_takePhoto"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/btn_sendDataPlayer"
        android:layout_alignTop="@+id/fotoJugador"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/txtButtonPhoto"
        app:layout_constraintBottom_toTopOf="@+id/btn_sendDataPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toEndOf="@+id/fotoJugador"
        app:layout_constraintTop_toBottomOf="@+id/emailET"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="172dp"
        android:layout_height="31dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:text="@string/email"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellidoET" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="172dp"
        android:layout_height="32dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="@string/SndName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameET" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/firstname"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/nameET"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/contentDescriptionName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</android.support.constraint.ConstraintLayout>
